--- a/themes/default/common/sidenav.html
+++ b/themes/default/common/sidenav.html
@@ -4,7 +4,7 @@
         <div class="col-md-12 logo pt-5">
             <!-- PROFILE PICTURE -->
             <a href="{{ app.url }}/{{ user.type }}/profile/{{ user.id }}">
-                <img src="{{ app.url }}/themes/{{ app.theme }}/assets/img/profile-pic.jpg" width="100px" height="100px" class="rounded-circle img-thumbnail"/>
+                <img src="{{ app.url }}/data/propic/{{ user.type }}/{{ user.id }}" width="100px" height="100px" class="rounded-circle img-thumbnail"/>
             </a>
             <!-- WELCOME TEXT WITH USERNAME -->
             <div class="sidenavusername mt-3">
